city filter bugfix

--- a/html/all.html
+++ b/html/all.html
@@ -39,6 +39,8 @@
           }
         }
       }
+      var f_str = getQuerystring('city');
+      console.log(f_str)
     } catch (exception) {
       var f_str = 0;  
     }
