--- a/html/all.html
+++ b/html/all.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/main.css">
 
     <!-- font -->
-    <link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 
  
     <!--[if lt IE 9]>
@@ -27,22 +27,35 @@
     <![endif]-->
 
   <script> 
-    try {
-      function getQuerystring(paramName) {
-        var _tempUrl = window.location.search.substring(1); //url에서 처음부터 '?'까지 삭제 
-        var _tempArray = _tempUrl.split('&'); // '&'을 기준으로 분리하기 
-        for (var i = 0; _tempArray.length; i++) {
-          var _keyValuePair = _tempArray[i].split('='); // '=' 을 기준으로 분리하기 
-          if (_keyValuePair[0] == paramName) { // _keyValuePair[0] : 파라미터 명 
-            // _keyValuePair[1] : 파라미터 값 
-            return _keyValuePair[1];
-          }
+    function getQuerystring(paramName) {
+      // console.log('tmpurl', windiw.location);
+      var _tempUrl = window.location.search.substring(1); //url에서 처음부터 '?'까지 삭제 
+      var _tempArray = _tempUrl.split('&'); // '&'을 기준으로 분리하기 
+      for (var i = 0; _tempArray.length; i++) {
+        var _keyValuePair = _tempArray[i].split('='); // '=' 을 기준으로 분리하기 
+        if (_keyValuePair[0] == paramName) { // _keyValuePair[0] : 파라미터 명 
+          // _keyValuePair[1] : 파라미터 값 
+          return _keyValuePair[1];
         }
       }
+    }
+    try { 
       var f_str = getQuerystring('city');
-      console.log(f_str)
+      // var provice = getQuerystring('provice');
+      // console.log('first_f_str', f_str);
+      // console.log(provice);
+      // console.log('province', getQuerystring('provice'));
+      //   console.log('province', p_str);
     } catch (exception) {
-      var f_str = 0;  
+      var f_str = 0;
+      // console.log('first_f_str_none', exception);
+    }
+    try {
+      var p_str = getQuerystring('province');
+      // console.log('p_str', p_str);
+    } catch (exception) {
+      var p_str = 0;
+      // console.log('first_p_str_none', exception);
     }
     
     
@@ -99,7 +112,7 @@
                   <a href="main.html#con02"><img src="../images/go_map_icon.png" alt="go_map_icon"><p>지도보기</p></a>
                 </div>
                 <div class="search_area">
-                  <div class="search_btn">지역<span class="search_name">전국 전체</span><img src="../images/Polygon.png" alt="Polygon"></div>
+                  <div class="search_btn">지역<span class="search_name"></span><img src="../images/Polygon.png" alt="Polygon"></div>
 				  <input type="hidden" class="search_focus" />
                   <div class="area_wrap clearfix">
                     <ul class="area_ul1">
