--- a/html/detail.html
+++ b/html/detail.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/jquery.bxslider.css">
 
     <!--font-awesome-->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <!--reset.css-->
     <link rel="stylesheet" href="../css/reset.css">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../css/main.css">
 
     <!-- font -->
-    <link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 
  
     <!--[if lt IE 9]>
@@ -33,9 +33,9 @@
     try {
       function getQuerystring(paramName) {
         var _tempUrl = window.location.search.substring(1); //url에서 처음부터 '?'까지 삭제 
-        console.log(_tempUrl);
+        // console.log(_tempUrl);
         var _tempArray = _tempUrl.split('&'); // '&'을 기준으로 분리하기 
-        console.log(_tempArray);
+        // console.log(_tempArray);
         for (var i = 0; _tempArray.length; i++) {
           var _keyValuePair = _tempArray[i].split('='); // '=' 을 기준으로 분리하기 
           if (_keyValuePair[0] == paramName) { // _keyValuePair[0] : 파라미터 명 
@@ -45,7 +45,7 @@
         }
       }
       var id = getQuerystring('id');
-      console.log(id);
+      // console.log(id);
     } catch (exception) {
       var id = 1;
     }
