Add table column in detail page

--- a/html/detail.html
+++ b/html/detail.html
@@ -145,13 +145,14 @@
                 </colgroup>
               
                 <tbody class="rooms_tb">
-                    <tr class="table_title">
+                  <tr class="table_title">
                     <th>이름</th>
                     <th>성별</th>
                     <th>타입</th>
                     <th>면적</th>
                     <th>월임대료</th>
                     <th>운영관리비</th>
+                    <th>선불공과금</th>
                     <th>예치금</th>
                     <th>입주가능일</th>
                     <th>입주신청</th>
