Add naver analytics script

--- a/html/main.html
+++ b/html/main.html
@@ -32,8 +32,6 @@
       <script src="js/IE9.js"></script>
     <![endif]-->
 
-	
-
   </head>
   <body>
 	
@@ -283,7 +281,7 @@
           <ul class="footer_menu">
             <li><a href="main.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>          
+            <li><a href="main.html#con07">자주 묻는 질문</a></li>
             <li>
               <img class="sns" src="../images/sns_naver.png" alt="naver">
               <img class="sns" src="../images/sns_insta.png" alt="insta">
@@ -294,11 +292,11 @@
             <a href="landlode.html">쉐어하우스 임대운영</a>
           </div>
         </div>
-		<div class="footer_top_m clearfix">
+        <div class="footer_top_m clearfix">
           <ul class="footer_menu">
             <li><a href="main.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>  
+            <li><a href="main.html#con07">자주 묻는 질문</a></li>
           </ul>
           <div class="footer_sns">
             <img class="sns" src="../images/sns_naver.png" alt="naver">
@@ -312,18 +310,11 @@
         <div class="footer_bottom">
           <p><span>상호명 : (주)원패밀리</span><span>대표 : 정원준</span>사업자등록번호 : 697-88-00461</p>
           <p><span>주소: 서울특별시 강남구 학동로 334, 303호(서림빌딩, 논현동)</span>대표번호: 070-4408-9489</p>
-          <p><span>이메일 문의  <i>help&#64;dgdr.co.kr</i></span><span>사업 및 제휴문의 <i>contact&#64;dgdr.co.kr</i></span>업무 시간 10:00~18:00 (주말/공휴일 휴무)</p>
+          <p><span>이메일 문의  <i>help&#64;dgdr.co.kr</i></span><span>사업 및 제휴문의 <i>contact&#64;dgdr.co.kr</i></span>업무 시간 10:00~18:00
+            (주말/공휴일 휴무)</p>
         </div>
       </div>
     </footer>
-    
-    <!-- 네이버 애널리틱스 스크립트 -->
-    <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script>
-    <script type="text/javascript">
-      if (!wcs_add) var wcs_add = {};
-      wcs_add["wa"] = "55c9833eff00d";
-      wcs_do();
-    </script>
 
     <script>
         try {
@@ -355,5 +346,18 @@
     <!-- 구글 맵 API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMaJwfh-LgFAChJMUkXfvFyjMOqxbBn8A&callback=initMap"></script>
   
+    <!-- <script>
+        $("document").ready(function () { $("#footer").load("./footer.html"); });
+        console.log('footer')
+    </script> -->
+
+    <!-- 네이버 애널리틱스 스크립트 -->
+    <script type="text/javascript" src="https://wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+        if (!wcs_add) var wcs_add = {};
+        wcs_add["wa"] = "3bd3a16812a33e";
+        // wcs_add["wa"] = "55c9833eff00d";
+        wcs_do();
+    </script>
   </body>
 </html>
