Change page title

--- a/html/all.html
+++ b/html/all.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 
-    <title>동거동락</title>
+    <title>동거동락 지점정보</title>
 
 
     <!--bxslider-->
@@ -209,8 +209,8 @@
   <script type="text/javascript" src="https://wcs.naver.net/wcslog.js"></script>
   <script type="text/javascript">
     if (!wcs_add) var wcs_add = {};
-    wcs_add["wa"] = "3bd3a16812a33e";
-    // wcs_add["wa"] = "55c9833eff00d";
+    // wcs_add["wa"] = "3bd3a16812a33e";
+    wcs_add["wa"] = "55c9833eff00d";
     wcs_do();
   </script>
   </body>
