--- a/html/main.html
+++ b/html/main.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <link rel="canonical" href="https://www.dgdr.com">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>동거동락</title>
+    <meta name="description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="동거동락-살고싶은 쉐어하우스">
+    <meta property="og:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
+    <meta property="og:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta property="og:url" content="https://www.dgdr.co.kr">
 
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="동거동락-살고싶은 쉐어하우스">
+    <meta name="twitter:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
+    <meta name="twitter:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta name="twitter:domain" content="https://www.dgdr.co.kr">
 
+    <!-- 타이틀 -->
+    <title>동거동락-살고싶은 쉐어하우스</title>
+    
     <!--bxslider-->
     <link rel="stylesheet" href="../css/jquery.bxslider.css">
 
@@ -355,8 +370,8 @@
     <script type="text/javascript" src="https://wcs.naver.net/wcslog.js"></script>
     <script type="text/javascript">
         if (!wcs_add) var wcs_add = {};
-        wcs_add["wa"] = "3bd3a16812a33e";
-        // wcs_add["wa"] = "55c9833eff00d";
+        // wcs_add["wa"] = "3bd3a16812a33e";
+        wcs_add["wa"] = "55c9833eff00d";
         wcs_do();
     </script>
   </body>
