--- a/html/landlode.html
+++ b/html/landlode.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>동거동락</title>
+    <title>동거동락 계약문의</title>
 
 
     <!--bxslider-->
@@ -395,8 +395,8 @@
   <script type="text/javascript" src="https://wcs.naver.net/wcslog.js"></script>
   <script type="text/javascript">
     if (!wcs_add) var wcs_add = {};
-    wcs_add["wa"] = "3bd3a16812a33e";
-    // wcs_add["wa"] = "55c9833eff00d";
+    // wcs_add["wa"] = "3bd3a16812a33e";
+    wcs_add["wa"] = "55c9833eff00d";
     wcs_do();
   </script>
 </body>
