Edit order page style

--- a/html/main.html
+++ b/html/main.html
@@ -60,6 +60,11 @@
     <!--bxslider-->
     <script src="../js/jquery.bxslider.js"></script>
 
+    <!-- 네이버웹마스터도구 -->
+    <meta name="naver-site-verification" content="17ec21e5829040d6fc848210b3c4d7f56fa5b33c" />
+    
+    <!-- 구글서치 -->
+    <meta name="google-site-verification" content="Zs5uFLuFJcO83--ZsQ-OGaBi53nn9tsRnj44MHS8lKQ" />
  
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -112,7 +117,6 @@
     </header>
 
     <div class="contents_wrap">
-      
       <div id="con01" class="con_01_wrap">
         <div class="container_01"> 
           <div class="con01_title container">
