--- a/html/order.html
+++ b/html/order.html
@@ -109,7 +109,7 @@
 
     <div class="contents_wrap">
         <div class="con_order_wrap">
-            <div>
+            <div class="container_01">
                 <div class="con_order_title container">
                     <h1 class="wide_max_h1">입주 신청이 완료되었습니다.</h1>
                     <h1 class="wide_mid_h1">입주 신청이 <br>완료되었습니다.</h1>
