지도 마커순서 수정

--- a/html/main.html
+++ b/html/main.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="../css/main.css">
 
     <!-- font -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css"> -->
 
 	 <!-- jQuery Insert -->
     <script src="../js/jquery-1.9.1.min.js"></script>
@@ -285,7 +285,7 @@
             <ul>
               <li>-  입주신청은 현재 공실이거나 계약종료 두 달 전인 방의 신청만 받습니다.</li>
               <li>-  홈페이지 내에서 지점별 입주신청이가능합니다. </li>
-              <li>-  신청서 작성후 24시간 내에 연락을 드리고, 투어 및 인터뷰 진행을 도와립니다. </li>
+              <li>-  신청서 작성후 24시간 내에 연락을 드리고, 투어 및 인터뷰 진행을 도와드립니다. </li>
               <li>-  계약시 중개수수료는 일체 받지 않습니다. 계약금으로 예치금을 수령하며, 계약종료 후 퇴실시 반환됩니다.</li>
               <li>-  월 임대료 및 추가비용은 입주 2일 전까지 납부하셔야 합니다. </li>
               <li>-  예치금 납부 후 입주를 취소하실 경우, 예치금의 50%만 반환됩니다.</li>
@@ -386,7 +386,7 @@
     <script src="../js/main.js"></script>
 
     <!-- 구글 맵 API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMaJwfh-LgFAChJMUkXfvFyjMOqxbBn8A&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2sddtb14sQSdWz5KapCRAT8yhgzkFtuY&callback=initMap"></script>
   
     <!-- <script>
         $("document").ready(function () { $("#footer").load("./footer.html"); });
