메인페이지 오타수정

--- a/html/main.html
+++ b/html/main.html
@@ -131,7 +131,7 @@
               <div class="con01_caption-txt">
                 <h2>ABOUT 동거동락</h2>
                 <p>
-                  동거동락은 대학생, 청년, 직장인들이 편안하고 쾌적한 환경에서 생활할 수 있도록 전국 주요 대학가, 역세권에 프리미엄 쉐어하우를 제공하고 있습니다.<br>
+                  동거동락은 대학생, 청년, 직장인들이 편안하고 쾌적한 환경에서 생활할 수 있도록 전국 주요 대학가, 역세권에 프리미엄 쉐어하우스를 제공하고 있습니다.<br>
                   반복되는 바쁜 일상 속에서, 쉐어하우스만의 커뮤니티에서 하우스메이트들과 함께 살며 즐거움을 느낌수도있고, 나만의 오붓한 공간 또한 누릴수 있습니다.<br>
                   <br>
                   한단계 업그레이드 된 나만의 공간, 동거동락을 경험하세요.
@@ -202,7 +202,7 @@
                 
               </div>
               <div class="s_txt">
-                <p>최소 1개월 단위 계약</p>
+                <p>최소 6개월 계약</p>
                 <p>월 단위 연장 가능</p>
               </div>
             </li>
