--- a/html/order.html
+++ b/html/order.html
@@ -160,7 +160,7 @@
             </div>
             <div class="footer_bottom">
                 <p><span>상호명 : (주)원패밀리</span><span>대표 : 정원준</span>사업자등록번호 : 697-88-00461</p>
-                <p><span>주소: 서울특별시 강남구 학동로 334, 303호(서림빌딩, 논현동)</span>대표번호: 070-4408-9489</p>
+                <p><span>주소: 서울특별시 서초구 신반포로47길 43 202호(잠원동)</span>대표번호: 070-4408-9489</p>
                 <p><span>이메일 문의  <i>help&#64;dgdr.co.kr</i></span><span>사업 및 제휴문의 <i>contact&#64;dgdr.co.kr</i></span>업무 시간
                     10:00~18:00 (주말/공휴일 휴무)</p>
             </div>
