--- a/html/detail.html
+++ b/html/detail.html
@@ -369,7 +369,7 @@
           </ul>
 		  </form>
         </div><!--dt_pop_form-->
-        <p>※입주 신청 기준 <span>24시간 내에 연락</span>을 드리며, 방문 투어 및 인터뷰 진행 후 입주 가능 여부를 알려드립니다.</p>
+        <p>※ 업무/운영시간 기준 <span>12시간 내 연락</span>을 드리며, 투어 및 인터뷰 후 입주 가능여부를 알려드립니다.</p>
         <p><input class="pop_cbox" type="checkbox">개인 정보 수집에 동의합니다.</p>        
         <div class="dt_pop_btn" id="apply_btn">
           입주 신청하기
