메인페이지 디자인 수정

--- a/html/order.html
+++ b/html/order.html
@@ -31,13 +31,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="동거동락-살고싶은 쉐어하우스">
     <meta property="og:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
-    <meta property="og:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta property="og:image" content="https://www.dgdr.co.kr/images/con01_bg_s_1.png">
     <meta property="og:url" content="https://www.dgdr.co.kr">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="동거동락-살고싶은 쉐어하우스">
     <meta name="twitter:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
-    <meta name="twitter:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta name="twitter:image" content="https://www.dgdr.co.kr/images/con01_bg_s_1.png">
     <meta name="twitter:domain" content="https://www.dgdr.co.kr">
 
     <!-- 타이틀 -->
