--- a/html/main.html
+++ b/html/main.html
@@ -30,13 +30,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="동거동락-살고싶은 쉐어하우스">
     <meta property="og:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
-    <meta property="og:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta property="og:image" content="https://www.dgdr.co.kr/images/con01_bg_s_1.png">
     <meta property="og:url" content="https://www.dgdr.co.kr">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="동거동락-살고싶은 쉐어하우스">
     <meta name="twitter:description" content="함께사는 즐거움, 동거동락 프리미엄 쉐어하우스. 서울 다지점 운영중!">
-    <meta name="twitter:image" content="https://www.dgdr.co.kr/images/con01_bg_s.jpg">
+    <meta name="twitter:image" content="https://www.dgdr.co.kr/images/con01_bg_s_1.png">
     <meta name="twitter:domain" content="https://www.dgdr.co.kr">
 
     <!-- 타이틀 -->
@@ -118,15 +118,19 @@
 
     <div class="contents_wrap">
       <div id="con01" class="con_01_wrap">
-        <div class="container_01"> 
-          <div class="con01_title container">
-            <h1>함께 사는 즐거움, 동거동락</h1>
-            <h3>살고 싶은 나만의 공간을 경험하세요!</h3>
-          </div>        
-          <div class="con01_caption">
-            <div class="container clearfix">
+        <div class="container_01">
+            <div class="con01_title">
+              <h3>새로운 시작, 설레는 마음</h3>
+              <h1>프리미엄 쉐어하우스</h1>
+              <h1>
+                <span class="bg_green">동거동락</span>과 함께 하세요!</h1>
+            </div>
+          
+          <div class="con01_caption land_caption">
+            <div class="container clearfix about">
+              <h3>ABOUT 동거동락</h3>
               <div class="logo_banner">
-                 <img src="../images/logo_banner.png" alt="logo2">
+                <img src="../images/land_logo.png" alt="logo2">
               </div>
               <div class="con01_caption-txt">
                 <h2>ABOUT 동거동락</h2>
