다른 페이지로 가는 버튼 클릭시 새텝으로 열기 개발

--- a/html/detail.html
+++ b/html/detail.html
@@ -34,10 +34,10 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <!--reset.css-->
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/reset2.css">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main2.css">
 
     <!-- font -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
