--- a/html/landlode.html
+++ b/html/landlode.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="../css/jquery.bxslider.css">
 
     <!--reset.css-->
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/reset2.css">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main2.css">
 
     <!-- font -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
