--- a/html/management.html
+++ b/html/management.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="../css/jquery.bxslider.css">
 
     <!--reset.css-->
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/reset2.css">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main2.css">
 
     <!-- font -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
@@ -72,21 +72,21 @@
       </div> -->
       <div class="header_bottom">
         <div class="container_01">
-		<div class="logo_wrap">
-          <div class="logo_header">
-            <a href="main.html"></a>
+          <div class="logo_wrap">
+            <div style="width: 183px; height: 50px; margin-top: 12px; float: left; cursor: pointer; background: url(../images/logo_header.png) 0 0 no-repeat;">
+              <a target="_blank" href="main.html" style="width: 183px; height: 50px; display: block;"></a>
+            </div>
+            
+            <!-- m-gnb -->
+            <div class="m-gnb">            
+              <!-- Mobile Button-->
+              <a href="#" class="mobile-btn">
+                <img src="../images/gnb_m_btn.png" alt="gnb_m_btn">
+              </a>
+            </div><!-- End : m-gnb -->
           </div>
 
-          <!-- m-gnb -->
-          <div class="m-gnb">            
-            <!-- Mobile Button-->
-            <a href="#" class="mobile-btn">
-              <img src="../images/gnb_m_btn.png" alt="gnb_m_btn">
-            </a>
-          </div><!-- End : m-gnb -->
-		</div>
-
-          <div class="header_btn"><a href="landlode.html">쉐어하우스 임대운영</a></div>
+          <div class="header_btn"><a target="_blank" href="landlode.html">쉐어하우스 임대운영</a></div>
           <ul class="gnb">
             <li><a>ABOUT</a></li>
             <!-- <li><a href="all.html">지점정보</a></li> -->
@@ -117,7 +117,7 @@
               <div class="manage_con01_caption-txt">
                 <p>
                   (주)원패밀리는 1인가구를 위한 프리미엄 쉐어하우스 동거동락을 운영하고 있습니다.<br>
-                  동거동락은 업계 최저 공실률을 자랑하고 있므녀, 쉐어하우스 운영 노하우를 기반으로<br>
+                  동거동락은 업계 최저 공실률을 자랑하고 있으며, 쉐어하우스 운영 노하우를 기반으로<br>
                   원룸/오피스텔 주택임대관리를 책임지겠습니다.
                 </p>
               </div>
@@ -285,9 +285,9 @@
       <div class="container">
         <div class="footer_top clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
-            <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a target="_blank" href="main.html">Home</a></li>
+            <li><a target="_blank" href="all.html">모든 지점 보기</a></li>
+            <li><a target="_blank" href="main.html#con07">자주 묻는 질문</a></li>
             <li>
               <img class="sns" src="../images/sns_naver.png" alt="naver">
               <img class="sns" src="../images/sns_insta.png" alt="insta">
@@ -295,7 +295,7 @@
             </li>
           </ul>
           <div class="house_btn">
-            <a href="landlode.html">쉐어하우스 임대운영</a>
+            <a target="_blank" href="landlode.html">쉐어하우스 임대운영</a>
           </div>
         </div>
         <div class="footer_top_m clearfix">
@@ -310,7 +310,7 @@
             <img class="sns" src="../images/sns_facebook.png" alt="facebook">
           </div>
           <div class="house_btn">
-            <a href="landlode.html">쉐어하우스 임대운영</a>
+            <a target="_blank" href="landlode.html">쉐어하우스 임대운영</a>
           </div>
         </div>
         <div class="footer_bottom">
