management 페이지 개발

--- a/html/management.html
+++ b/html/management.html
@@ -73,8 +73,8 @@
       <div class="header_bottom">
         <div class="container_01">
           <div class="logo_wrap">
-            <div style="width: 183px; height: 50px; margin-top: 12px; float: left; cursor: pointer; background: url(../images/logo_header.png) 0 0 no-repeat;">
-              <a target="_blank" href="main.html" style="width: 183px; height: 50px; display: block;"></a>
+            <div class="logo_header">
+              <a target="_blank" href="main.html"></a>
             </div>
             
             <!-- m-gnb -->
@@ -92,6 +92,7 @@
             <!-- <li><a href="all.html">지점정보</a></li> -->
             <li><a>서비스</a></li>            
             <li><a>문의하기</a></li>
+            <li><a target="_blank" href="landlode.html">쉐어하우스 임대운영</a></li>
             <!-- <li><a>묻고답하기</a></li> -->
 			<!-- <li><a href="landlode.html">쉐어하우스 임대운영</a></li> -->
           </ul>
@@ -101,7 +102,7 @@
 
     </header>
 
-    <div class="contents_wrap" style="margin-top: 70px">
+    <div class="manage_contents_wrap">
       <div id="con01" class="con_01_wrap manage_c01_wrap">
         <div class="container_01"> 
           <div class="manage_c01_title">
@@ -115,6 +116,7 @@
                  <img src="../images/land_logo.png" alt="logo2">
               </div>
               <div class="manage_con01_caption-txt">
+                <h2>ABOUT 동거동락</h2>
                 <p>
                   (주)원패밀리는 1인가구를 위한 프리미엄 쉐어하우스 동거동락을 운영하고 있습니다.<br>
                   동거동락은 업계 최저 공실률을 자랑하고 있으며, 쉐어하우스 운영 노하우를 기반으로<br>
@@ -128,7 +130,7 @@
 
       <div id="con02" class="manage_c02_wrap"></div>
 
-      <div id="con03" style="width: 1400px; background-color: gray; padding-top: 80px; padding-bottom: 80px; margin:auto;">
+      <div id="con03" class="con03">
         <div class="management_con03_wrap">
           <h2>부동산 임대관리 문의하기</h2>
           <form id="ld_form" action="" method="POST" >
@@ -152,19 +154,16 @@
                 </li>
               </ul>
             </div>
-            <!--dt_pop_form-->
           </form>
-          <div class="dt_pop_btn" id="management_btn" style="font-size: 20px;">
+          <div class="dt_pop_btn2" id="management_btn">
             문의하기 >
           </div>
-          <div style="margin-top: 40px">
+          <div class="manage_cbox">
             <p><input class="pop_cbox" type="checkbox">개인 정보 수집에 동의합니다.</p>
             <p>※ 문의신청 후 <span>24시간 내에 연락</span>을 드리겠습니다. (주말, 공휴일 제외)</p>
           </div>
         </div>
-        <!--pop_wrap-->
       </div>
-      <!--dt_pop_black-->
 
       <div class="land_c04_wrap">
         <div class="container_01">
