index 페이지 위치 변경

--- a/html/all.html
+++ b/html/all.html
@@ -113,7 +113,7 @@
         <div class="container_01">
           <div class="logo_wrap">
             <div class="logo_header">
-              <a href="main.html"></a>
+              <a href="../index.html"></a>
             </div>
             
             <!-- m-gnb -->
@@ -146,7 +146,7 @@
             <div class="con01_box"> 
                 <h2>동거동락 지점 찾기</h2>
                 <div class="go_map">
-                  <a href="main.html#con02"><img src="../images/go_map_icon.png" alt="go_map_icon"><p>지도보기</p></a>
+                  <a href="../index.html#con02"><img src="../images/go_map_icon.png" alt="go_map_icon"><p>지도보기</p></a>
                 </div>
                 <div class="search_area">
                   <div class="search_btn">지역<span class="search_name"></span><img src="../images/Polygon.png" alt="Polygon"></div>
@@ -191,9 +191,9 @@
       <div class="container">
         <div class="footer_top clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
             <li>
               <img class="sns" src="../images/sns_naver.png" alt="naver">
               <img class="sns" src="../images/sns_insta.png" alt="insta">
@@ -206,9 +206,9 @@
         </div>
         <div class="footer_top_m clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
           </ul>
           <div class="footer_sns">
             <img class="sns" src="../images/sns_naver.png" alt="naver">
