--- a/html/contract.html
+++ b/html/contract.html
@@ -23,8 +23,8 @@
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-PRCWVHN');
 
-        // 접속하자마자 html폴더의 main.html 로 링크연결
-        setTimeout(function () { window.location.href = "main.html"; }, 1000);
+        // 접속하자마자 html폴더의 index.html 로 링크연결
+        setTimeout(function () { window.location.href = "../index.html"; }, 1000);
     </script>
     <!-- End Google Tag Manager -->
 </head>
