--- a/html/landlode.html
+++ b/html/landlode.html
@@ -86,7 +86,7 @@
         <div class="container_01">
 		<div class="logo_wrap">
           <div class="logo_header">
-            <a href="main.html"></a>
+            <a href="../index.html"></a>
           </div>
 
           <!-- m-gnb -->
@@ -330,33 +330,33 @@
       <div class="container">
         <div class="footer_top clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
             <li>
               <img class="sns" src="../images/sns_naver.png" alt="naver">
               <img class="sns" src="../images/sns_insta.png" alt="insta">
               <img class="sns" src="../images/sns_facebook.png" alt="facebook">
             </li>
           </ul>
-          <div class="house_btn">
+          <!-- <div class="house_btn">
             <a href="landlode.html">쉐어하우스 임대운영</a>
-          </div>
+          </div> -->
         </div>
         <div class="footer_top_m clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
           </ul>
           <div class="footer_sns">
             <img class="sns" src="../images/sns_naver.png" alt="naver">
             <img class="sns" src="../images/sns_insta.png" alt="insta">
             <img class="sns" src="../images/sns_facebook.png" alt="facebook">
           </div>
-          <div class="house_btn">
+          <!-- <div class="house_btn">
             <a href="landlode.html">쉐어하우스 임대운영</a>
-          </div>
+          </div> -->
         </div>
         <div class="footer_bottom">
           <p><span>상호명 : (주)원패밀리</span><span>대표 : 정원준</span>사업자등록번호 : 697-88-00461</p>
