--- a/html/order.html
+++ b/html/order.html
@@ -138,7 +138,7 @@
                     <div class="order_button back_button" action="action" type="button" onclick="window.history.go(-1); return false;" onmouseover="">
                         이전 페이지로<br>돌아가기
                     </div>
-                    <div class="order_button main_button" action="action" type="button" onclick="window.location='main.html'; return false;" onmouseover="">
+                    <div class="order_button main_button" action="action" type="button" onclick="window.location='../index.html'; return false;" onmouseover="">
                         메인 페이지로
                         <br>돌아가기
                     </div>
@@ -151,9 +151,9 @@
         <div class="container">
             <div class="footer_top clearfix">
                 <ul class="footer_menu">
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="all.html">모든 지점 보기</a></li>
-                    <li><a href="main.html#con07">자주 묻는 질문</a></li>
+                    <li><a href="../index.html#con07">자주 묻는 질문</a></li>
                     <li>
                         <img class="sns" src="../images/sns_naver.png" alt="naver">
                         <img class="sns" src="../images/sns_insta.png" alt="insta">
@@ -166,9 +166,9 @@
             </div>
             <div class="footer_top_m clearfix">
                 <ul class="footer_menu">
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="all.html">모든 지점 보기</a></li>
-                    <li><a href="main.html#con07">자주 묻는 질문</a></li>
+                    <li><a href="../index.html#con07">자주 묻는 질문</a></li>
                 </ul>
                 <div class="footer_sns">
                     <img class="sns" src="../images/sns_naver.png" alt="naver">
