--- a/html/detail.html
+++ b/html/detail.html
@@ -105,7 +105,7 @@
         <div class="container_01">
           <div class="logo_wrap">
             <div class="logo_header">
-              <a href="main.html"></a>
+              <a href="../index.html"></a>
             </div>
             
             <!-- m-gnb -->
@@ -273,9 +273,9 @@
       <div class="container">
         <div class="footer_top clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
             <li>
               <img class="sns" src="../images/sns_naver.png" alt="naver">
               <img class="sns" src="../images/sns_insta.png" alt="insta">
@@ -288,9 +288,9 @@
         </div>
         <div class="footer_top_m clearfix">
           <ul class="footer_menu">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="all.html">모든 지점 보기</a></li>
-            <li><a href="main.html#con07">자주 묻는 질문</a></li>
+            <li><a href="../index.html#con07">자주 묻는 질문</a></li>
           </ul>
           <div class="footer_sns">
             <img class="sns" src="../images/sns_naver.png" alt="naver">
